Don't allow the user to scroll things that are 'overflow: hidden'.  b=259615  r+sr=roc