content/events/src/nsEventStateManager.cpp
@@ -2083,7 +2083,7 @@ nsEventStateManager::PostHandleEvent(nsPresContext* aPresContext,
           case NS_VK_PAGE_DOWN:
           case NS_VK_PAGE_UP:
             if (!mCurrentFocus) {
-              nsIScrollableView* sv = nsLayoutUtils::GetNearestScrollingView(aView);
+              nsIScrollableView* sv = nsLayoutUtils::GetNearestScrollingView(aView, nsLayoutUtils::eVertical);
               if (sv) {
                 nsKeyEvent * keyEvent = (nsKeyEvent *)aEvent;
                 sv->ScrollByPages(0, (keyEvent->keyCode != NS_VK_PAGE_UP) ? 1 : -1);
@@ -2093,7 +2093,7 @@ nsEventStateManager::PostHandleEvent(nsPresContext* aPresContext,
           case NS_VK_HOME:
           case NS_VK_END:
             if (!mCurrentFocus) {
-              nsIScrollableView* sv = nsLayoutUtils::GetNearestScrollingView(aView);
+              nsIScrollableView* sv = nsLayoutUtils::GetNearestScrollingView(aView, nsLayoutUtils::eVertical);
               if (sv) {
                 nsKeyEvent * keyEvent = (nsKeyEvent *)aEvent;
                 sv->ScrollByWhole((keyEvent->keyCode != NS_VK_HOME) ? PR_FALSE : PR_TRUE);
@@ -2103,7 +2103,7 @@ nsEventStateManager::PostHandleEvent(nsPresContext* aPresContext,
           case NS_VK_DOWN:
           case NS_VK_UP:
             if (!mCurrentFocus) {
-              nsIScrollableView* sv = nsLayoutUtils::GetNearestScrollingView(aView);
+              nsIScrollableView* sv = nsLayoutUtils::GetNearestScrollingView(aView, nsLayoutUtils::eVertical);
               if (sv) {
                 nsKeyEvent * keyEvent = (nsKeyEvent *)aEvent;
                 sv->ScrollByLines(0, (keyEvent->keyCode == NS_VK_DOWN) ? 1 : -1);
@@ -2122,7 +2122,7 @@ nsEventStateManager::PostHandleEvent(nsPresContext* aPresContext,
           case NS_VK_LEFT:
           case NS_VK_RIGHT:
             if (!mCurrentFocus) {
-              nsIScrollableView* sv = nsLayoutUtils::GetNearestScrollingView(aView);
+              nsIScrollableView* sv = nsLayoutUtils::GetNearestScrollingView(aView, nsLayoutUtils::eHorizontal);
               if (sv) {
                 nsKeyEvent * keyEvent = (nsKeyEvent *)aEvent;
                 sv->ScrollByLines((keyEvent->keyCode == NS_VK_RIGHT) ? 1 : -1, 0);
@@ -2144,7 +2144,7 @@ nsEventStateManager::PostHandleEvent(nsPresContext* aPresContext,
             nsKeyEvent * keyEvent = (nsKeyEvent *)aEvent;
             if (keyEvent->charCode == 0x20) {
               if (!mCurrentFocus) {
-                nsIScrollableView* sv = nsLayoutUtils::GetNearestScrollingView(aView);
+                nsIScrollableView* sv = nsLayoutUtils::GetNearestScrollingView(aView, nsLayoutUtils::eVertical);
                 if (sv) {
                   sv->ScrollByPages(0, 1);
                 }
